--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
             <div class="mediaC">
               <div>
                 <img
-                  src="./media/mode_implant-2023_katalog-web.jpeg"
+                  src="mode_implant-2023_katalog-web.jpeg"
                   alt="MODE IMPLANT-2023 Katalog-web"
                 />
               </div>
@@ -461,7 +461,7 @@
             <!---->
             <div class="mediaC">
               <div>
-                <img src="./media/notch-brochure.jpeg" alt="NOTCH-Brochure" />
+                <img src="notch-brochure.jpeg" alt="NOTCH-Brochure" />
               </div>
               <div class="controls">
                 <p class="title ziacard">NOTCH-Brochure</p>
