--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
               target="_blank"
               rel="noopener noreferrer"
               aria-label="whatsApp"
-              href="wa.me/+201020666139"
+              href="https://wa.link/9kullh"
               style="background-color: rgb(55, 65, 81)"
               ><div class="icon action">
                 <svg
