--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
             <!---->
             <div class="mediaC">
               <div>
-                <img src="./media/notch-brochure.jpeg" alt="NOTCH-Brochure" />
+                <img src="notch-brochure.jpeg" alt="NOTCH-Brochure" />
               </div>
               <div class="controls">
                 <p class="title ziacard">NOTCH-Brochure</p>
