--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
                 <p class="mediaInfo ziacard">PDF - 18.45 MB</p>
                 <div class="docDl">
                   <a
-                    href="./media/notch-brochure.pdf"
+                    href="notch-brochure.pdf"
                     download=""
                     target="_blank"
                     class="dlBtn"
