--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
                 <p class="mediaInfo ziacard">PDF - 39.07 MB</p>
                 <div class="docDl">
                   <a
-                    href="./media/mode_implant-2023_katalog-web.pdf"
+                    href="https://drive.google.com/file/d/1RY0pU_pgpt5Sz3OF8V0PXWbA9n0ylQaz/view?usp=drive_link"
                     download=""
                     target="_blank"
                     class="dlBtn"
@@ -468,7 +468,7 @@
                 <p class="mediaInfo ziacard">PDF - 18.45 MB</p>
                 <div class="docDl">
                   <a
-                    href="notch-brochure.pdf"
+                    href="https://drive.google.com/file/d/1Odu9jP5D2MsBQZmLfKSC3yOELplf-IvA/view?usp=drive_link"
                     download=""
                     target="_blank"
                     class="dlBtn"
